repaired ending - visible word

--- a/src/components/GameOver/GameOver.css
+++ b/src/components/GameOver/GameOver.css
@@ -14,3 +14,7 @@
     width: 150px;
     height: 50px;
 }
+.GameOver h5{
+    font-size: 2rem;
+    text-transform: uppercase;
+}
